2000-09-25  Christophe Merlet  <christophe@merlet.net>

	* fr.po: Updated French translation.
	* POTFILES.in: Updated files list.

2000-09-16  Almer S. Tigelaar  <almer1@dds.nl>

	* nl.po: New Dutch translation

2000-09-09  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2000-09-09 Yukihiro Nakai <nakai@gnome.gr.jp>

	* ja.po: Update Japanese translation

2000-09-07 Yukihiro Nakai <nakai@gnome.gr.jp>

	* ja.po: A few minor bug fix

2000-08-29  Manuel de Vega Barreiro <barreiro@arrakis.es> 

	* es.po: New Spanish translation.

2000-08-16  Daniel Egger  <egger@suse.de> 

	* de.po: Updated.

2000-08-16  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
	* de.po: updated with Chrisime help.

2000-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2000-08-12  Benedikt Roth  <Benedikt.Roth@gmx.net>

	* de.po: Updated German translation.

2000-08-10  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-08-10  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Added app/dia-props.c and plus-ins/svg/svg.c.
	* no.po: Updated Norwegian translation.
	
2000-08-07  Yuri Syrota  <rasta@renome.rovno.ua> 

        * uk.po: Updated Ukrainian translation.

2000-08-06  Daniel Egger  <egger@suse.de> 

        * de.po: Updated the German translation.

2000-08-06  Fatih Demir  <kabalak@gmx.net> 

        * tr.po: Updated the Turkish translation.

2000-08-03 Alastair McKinstry <mckinstry@computer.org>

	* ga.po: Further Irish translations.

2000-08-03  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.

2000-07-30  Christopher R. Gabriel  <cgabriel@softwarelibero.org>

	* it.po: updated italian translation from 
	Salvo Isaja <salvois@it.gnome.org>

2000-07-27  Fatih Demir  <kabalak@gmx.net> 

        * tr.po: Updated the Turkish translation.

2000-07-27  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
