@@ -1,5 +1,9 @@
 2000-09-25  Christophe Merlet  <christophe@merlet.net>
 
+	* POTFILES.in: Reverted my changes. Oups :(
+
+2000-09-25  Christophe Merlet  <christophe@merlet.net>
+
 	* fr.po: Updated French translation.
 	* POTFILES.in: Updated files list.
 
